# django-responsive-images

./: LICENSE  README  README.rst  setup.cfg  setup.py
responsive_images/: models.py  tests.py  utils.py
responsive_images/migrations/: 0001_initial.py
srcset/: models.py  tests.py  utils.py
srcset/templatetags/: srcset.py
