[metadata]
name = django-responsive-images
version = attr: responsive_images.__version__
author = James Lecker Jr
description = A Django app for resizing images and generating src and srcset values via template tags
long_description = file: README.rst
url = https://github.com/jlecker/django-responsive-images
classifiers =
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Programming Language :: Python
	Framework :: Django

[options]
packages = responsive_images, responsive_images.templatetags
